--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@mantine/core": "^6.0.8",
+    "@mantine/dates": "^6.0.13",
     "@mantine/form": "^6.0.8",
+    "@mantine/utils": "^6.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
