--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@mantine/core": "^6.0.13",
     "@mantine/dates": "^6.0.13",
     "@mantine/form": "^6.0.8",
+    "@mantine/hooks": "^6.0.13",
     "@mantine/utils": "^6.0.13",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.8",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.0.0",
     "normalize.css": "^8.0.1",
