Add board + handle file

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,4 +6,4 @@ PORT = 3030
 EMAIL_USERNAME = ourboardservice@gmail.com
 EMAIL_PASSWORD = hmftfwkrdrvpgfap
 # The absolute path to Server file
-ROOT_ABSOLUTE = C:\Users\pc\Web-Project-2022.2-Group-25\server\
+ROOT_ABSOLUTE = C:\Users\Public\Documents\file_upload
